# drake

./: .gitmodules  WORKSPACE  doall_histograms.m
bindings/pydrake/systems/: sensors_py.cc
drake/examples/kinova_jaco_arm/: BUILD.bazel  director_config.json  director_ik_app.py  kinova_driver.cc  kinova_jaco_fp.csv  kinova_jaco_state_translator.py  stored_poses.json
drake/examples/kuka_iiwa_arm/: director_config.json  director_ik_app.py  iiwa_lcm.cc  iiwaplanning.py  kuka_plan_runner.cc  kuka_sim.pmd  optitrack_client.py  optitrack_visualizer.py
drake/manipulation/perception/: BUILD
drake/manipulation/planner/: BUILD  constraint_relaxing_ik.cc  constraint_relaxing_ik.h
examples/: BUILD.bazel
examples/contact_model/: BUILD.bazel  procman_run  rigid_mug.pmd  rigid_mug_gripper.cc  run_mug_sim.sh  schunk_wsg_50.sdf  schunk_wsg_50_ball_contact_visual_collision.sdf
examples/contact_model/mbp/: BUILD.bazel  cylinder_mug.sdf  rigid_mug_gripper.cc  rigid_mug_gripper.sdf  rigid_mug_gripper.urdf  rigid_mug_gripper_mbp.cc  run_mug_sim.sh  schunk_wsg_50.sdf
examples/franka_panda_arm/: BUILD.bazel  move_panda_ee.cc  move_panda_ik.cc  panda_controller.cc  panda_simulation.cc
examples/kinova_jaco_arm/: jaco_common.cc  jaco_common.h  jaco_controller.cc  jaco_lcm.cc  jaco_lcm.h  jaco_simulation.cc
examples/kinova_jaco_arm/dev/pick_and_place/: BUILD.bazel  jaco_lcm_pick_and_place_planner.cc  jaco_lcm_pick_and_place_simulator.cc  jaco_lcm_planner.cc  jaco_lcm_planner.h
examples/kuka_iiwa_arm/: BUILD.bazel  iiwa_common.cc  iiwa_common.h  iiwa_wsg_simulation.cc  kuka_iiwa_state_translator.cc  kuka_sim.pmd  kuka_sim_dual.pmd  move_iiwa_ee.cc
examples/kuka_iiwa_arm/controlled_kuka/: BUILD.bazel  controlled_kuka_multibody_demo.cc
examples/kuka_iiwa_arm/iiwa_world/: BUILD.bazel  iiwa_wsg_diagram_factory.cc  multi_arm_with_gripper_demo.cc
examples/kuka_iiwa_arm/models/: iiwa_wsg_fixture.urdf
examples/kuka_iiwa_arm/pick_and_place/: BUILD.bazel  pick_and_place_configuration.h  pick_and_place_configuration.proto  pick_and_place_configuration_parsing.cc  pick_and_place_configuration_parsing.h  pick_and_place_state_machine.cc  pick_and_place_state_machine.h  pick_and_place_tree.cc  pick_and_place_tree.h
examples/manipulation_station/: manipulation_station_hardware_interface.h
examples/multibody/bouncing_ball/: bouncing_ball_run_dynamics.cc  make_bouncing_ball_plant.cc  make_bouncing_ball_plant.h
examples/multibody/cart_pole/: cart_pole_passive_simulation.cc
examples/multibody/inclined_plane/: inclined_plane_run_dynamics.cc
examples/multibody/objects_falling/: BUILD.bazel  make_objects_falling.cc  make_objects_falling.h  passive_simulation.cc
examples/multibody/pendulum/: passive_simulation.cc
examples/simple_gripper/: simple_gripper.cc
examples/turntable/: BUILD.bazel  table_and_ball.sdf  table_and_ball_simulation.cc
lcmtypes/: lcmt_contact_info_for_viz.lcm  lcmt_schunk_wsg_status.lcm
manipulation/franka_panda/: BUILD.bazel  panda_command_sender.cc  panda_command_sender.h  panda_constants.h
manipulation/franka_panda/test/: panda_command_sender_test.cc
manipulation/kinova_jaco/: jaco_command_receiver.cc  jaco_command_receiver.h  jaco_command_sender.cc  jaco_command_sender.h  jaco_status_receiver.cc  jaco_status_receiver.h  jaco_status_sender.cc  jaco_status_sender.h
manipulation/kinova_jaco/test/: jaco_command_receiver_test.cc  jaco_command_sender_test.cc  jaco_status_receiver_test.cc  jaco_status_sender_test.cc
manipulation/models/iiwa_description/: model.config
manipulation/perception/: optitrack_pose_extractor.cc  optitrack_pose_extractor.h
manipulation/pick_and_place_example/: BUILD.bazel  action.cc  action.h  pick_and_place_configuration.h  pick_and_place_configuration.proto  pick_and_place_configuration_parsing.cc  pick_and_place_configuration_parsing.h  pick_and_place_simulation_helpers.cc  pick_and_place_simulation_helpers.h  pick_and_place_state_machine.cc  pick_and_place_state_machine.h  world_state.cc  world_state.h
manipulation/pick_and_place_example/configuration/: dual_iiwa.pick_and_place_configuration  dual_jaco.pick_and_place_configuration  single_iiwa.pick_and_place_configuration  single_jaco.pick_and_place_configuration  single_jaco_no_fingers.pick_and_place_configuration  yellow_posts.pick_and_place_configuration
manipulation/pick_and_place_example/test/: pick_and_place_configuration_parsing_test.cc  pick_and_place_state_machine_test.cc  world_state_test.cc
manipulation/planner/: BUILD.bazel
manipulation/schunk_wsg/: schunk_wsg_constants.h  schunk_wsg_controller.cc  schunk_wsg_lcm.cc
manipulation/util/: BUILD.bazel  plan_utils.cc  plan_utils.h  world_sim_tree_builder.cc  world_sim_tree_builder.h
multibody/benchmarks/inclined_plane/: make_inclined_plane_plant.cc  make_inclined_plane_plant.h
multibody/benchmarks/pendulum/: make_pendulum_plant.cc  make_pendulum_plant.h
multibody/constraint/: constraint_solver.h
multibody/multibody_tree/: multibody_tree.cc  space_xyz_mobilizer.cc
multibody/multibody_tree/multibody_plant/: BUILD.bazel  multibody_plant.cc  multibody_plant.h
multibody/multibody_tree/parsing/: BUILD.bazel  multibody_plant_sdf_parser.cc  multibody_plant_sdf_parser.h  multibody_plant_urdf_parser.cc  multibody_plant_urdf_parser.h  scene_graph_parser_detail.cc  scene_graph_parser_detail.h
multibody/rigid_body_plant/: BUILD.bazel  compliant_contact_model.cc  contact_info.cc  contact_info.h  contact_results_to_lcm.cc  rigid_body_plant.cc
systems/analysis/: simulator.cc  simulator.h
systems/framework/: BUILD.bazel  diagram-inl.h  diagram.cc  diagram.h  diagram_builder-inl.h  diagram_builder.cc  diagram_builder.h  diagram_context-inl.h  diagram_context.cc  diagram_context.h  leaf_system-inl.h  leaf_system.cc  leaf_system.h  system-inl.h  system.cc  system.h
systems/lcm/: lcm_subscriber_system.cc  lcm_subscriber_system.h
systems/sensors/: BUILD.bazel  optitrack_sender.cc  optitrack_sender.h
tools/: BUILD  drake_visualizer_apple.sh  drake_visualizer_linux.sh
(+66 files in other folders)
