# -*- python -*-

load(
    "@drake//tools/skylark:drake_cc.bzl",
    "drake_cc_binary",
    "drake_cc_googletest",
    "drake_cc_library",
)
load("//tools/lint:lint.bzl", "add_lint_tests")

package(
    default_visibility = [":__subpackages__"],
)

drake_cc_binary(
    name = "move_panda_ee",
    srcs = ["move_panda_ee.cc"],
    data = [
        "//manipulation/models/franka_description:models",
    ],
    deps = [
        "//common:add_text_logging_gflags",
        "//common:find_resource",
        "//manipulation/planner:differential_inverse_kinematics",
        "//math:geometric_transform",
        "//multibody/parsing",
        "//multibody/plant",
        "@lcm",
        "@lcmtypes_bot2_core",
    ],
)

drake_cc_binary(
    name = "move_panda_ik",
    srcs = ["move_panda_ik.cc"],
    data = [
        "//manipulation/models/franka_description:models",
    ],
    deps = [
        "//common:add_text_logging_gflags",
        "//manipulation/planner:constraint_relaxing_ik",
        "//manipulation/util:robot_plan_utils",
        "//math:geometric_transform",
        "//multibody/parsing",
        "//multibody/plant",
        "@lcm",
        "@lcmtypes_bot2_core",
        "@lcmtypes_robotlocomotion",
    ],
)

drake_cc_binary(
    name = "panda_controller",
    srcs = ["panda_controller.cc"],
    data = [
        "//manipulation/models/franka_description:models",
    ],
    deps = [
        "//common:add_text_logging_gflags",
        "//common:find_resource",
        "//lcm",
        "//manipulation/franka_panda",
        "//manipulation/planner:robot_plan_interpolator",
        "//systems/analysis:simulator",
        "//systems/controllers:pid_controller",
        "//systems/lcm:lcm_pubsub_system",
        "//systems/primitives:adder",
        "//systems/primitives:demultiplexer",
        "//systems/primitives:multiplexer",
        "@gflags",
        "@lcmtypes_bot2_core",
        "@lcmtypes_robotlocomotion",
    ],
)

drake_cc_binary(
    name = "panda_simulation",
    srcs = ["panda_simulation.cc"],
    add_test_rule = 1,
    data = [
        "//manipulation/models/franka_description:models",
    ],
    test_rule_args = ["--simulation_sec=0.1"],
    deps = [
        "//common:add_text_logging_gflags",
        "//common:find_resource",
        "//geometry:drake_visualizer",
        "//multibody/parsing",
        "//multibody/plant",
        "//systems/analysis:simulator",
        "//systems/controllers:inverse_dynamics_controller",
        "//systems/lcm",
        "@gflags",
        "@lcmtypes_bot2_core",
    ],

)

add_lint_tests()
