# -*- python -*-

load(
    "@drake//tools/skylark:drake_cc.bzl",
    "drake_cc_googletest",
    "drake_cc_library",
    "drake_cc_package_library",
)
load("//tools/lint:lint.bzl", "add_lint_tests")

package(
    default_visibility = ["//visibility:public"],
)

drake_cc_package_library(
    name = "franka_panda",
    deps = [
        ":panda_constants",
        ":panda_command_sender",
    ],
)

drake_cc_library(
    name = "panda_constants",
    hdrs = ["panda_constants.h"],
)

drake_cc_library(
    name = "panda_command_sender",
    srcs = ["panda_command_sender.cc"],
    hdrs = ["panda_command_sender.h"],
    deps = [
        ":panda_constants",
        "//common:essential",
        "//lcmtypes:lcmtypes_drake_cc",
        "//systems/framework:leaf_system",
    ],
)

# === test/ ===

drake_cc_googletest(
    name = "panda_command_sender_test",
    deps = [
        ":panda_command_sender",
        "//common/test_utilities:eigen_matrix_compare",
    ],
)
